@@ -1,19 +1,8 @@
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-! IMPORTANT NOTE
-! The setup script is broken right now.
-! To workaround, just run gfceux out of the source directory.
-!
-! $ python ./gfceux
-!
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
 You can install gfceux with setup.py:
 
 $ sudo python setup.py install --prefix=/usr/local
 
 You can change the prefix to whatever you like.
-
-FIXME - 12/5/2008 - You can only run gfceux out of its source folder.
 
 Requirements:
 Python (tested with 2.5); (Ubuntu package name:  python) 
@@ -21,11 +10,9 @@ Python (tested with 2.5); (Ubuntu package name:  python)
 PyGTK and GTK;  (Ubuntu package name: (python-gtk2 libgtk2.0-0)
 Fceux 2.x
 
-Recommended dependencies
-Pygame (Ubuntu package name: python-pygame) - This will allow graphical conifguraion of input
-
 NOTE: fceu 1.x is no longer supported in the gfceu 2.x series.  
       If you still want/need a front-end for gfceu use gfceu 0.x
       
-
+ALSO NOTE: you can no longer run gfceux from the source directory.
+    You need to run the install script and then run the app.
 
