@@ -1,12 +1,0 @@
-gfceux
-get_key.py
-config_parse.py
-setup.py
-COPYING
-ChangeLog
-INSTALL
-TODO
-gfceux.xml
-gfceux.desktop
-gfceux.png
-gfceux_big.png
